{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 94,
  "lineage": "52af406c-8690-f873-f41d-755cd62a526a",
  "resources": [
    {
      "module": "module.apigateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0f08fc173770fffbc",
            "network_interface_id": "eni-086ad956e1ab00047",
            "private_ip": "172.31.43.154",
            "subnet_id": "subnet-04cf529db6e1aa982"
          }
        }
      ]
    },
    {
      "module": "module.dependson",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:403373716862:security-group/sg-0981db16096712edd",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0981db16096712edd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "403373716862",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0568e8ff3bc2fa8a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dependson.aws_vpc.chandu-iot"
          ]
        }
      ]
    },
    {
      "module": "module.dependson",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:403373716862:subnet/subnet-04c224c2a6b627c5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c224c2a6b627c5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "403373716862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0568e8ff3bc2fa8a8"
          },
          "dependencies": [
            "module.dependson.aws_vpc.chandu-iot"
          ]
        }
      ]
    },
    {
      "module": "module.dependson",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:403373716862:subnet/subnet-0b9db494851b4c987",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9db494851b4c987",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "403373716862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0568e8ff3bc2fa8a8"
          },
          "dependencies": [
            "module.dependson.aws_vpc.chandu-iot"
          ]
        }
      ]
    },
    {
      "module": "module.dependson",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chandu-iot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:403373716862:vpc/vpc-0568e8ff3bc2fa8a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc5e6d90be535ff0",
            "default_route_table_id": "rtb-0608aecee00ae00eb",
            "default_security_group_id": "sg-07d40097c2ae295c8",
            "dhcp_options_id": "dopt-0ee1fd3d11d2a7fd5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0568e8ff3bc2fa8a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0608aecee00ae00eb",
            "owner_id": "403373716862",
            "tags": {
              "Name": "chandu-iot"
            },
            "tags_all": {
              "Name": "chandu-iot"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2fullwork",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "module.ec2fullwork.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f924dc71d44d23e2",
            "arn": "arn:aws:ec2:us-east-2:403373716862:instance/i-0c6714b588b2b1835",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6714b588b2b1835",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037399797f11cd3ea",
            "private_dns": "ip-172-31-29-129.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.129",
            "public_dns": "ec2-18-216-195-53.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.195.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08398d8c29088c4e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c1a3fccff595005",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a6b1ce012175e53"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2fullwork",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "module.ec2fullwork.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:403373716862:security-group/sg-0b8b738e5595742e3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8b738e5595742e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-elb",
            "name_prefix": "",
            "owner_id": "403373716862",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994af1a18564517e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2fullwork",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "module.ec2fullwork.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:403373716862:security-group/sg-016c1112f1e5626e9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-016c1112f1e5626e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "403373716862",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994af1a18564517e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}